[package]
name = "diffpatch"
version = "0.1.0"
edition = "2024"
description = "A tool to compare directories and create executable patches"
authors = ["Melaton"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/LemoBits/DiffPatch"
keywords = ["diff", "patch", "file-comparison", "executable-patch"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
walkdir = "2.4.0"
clap = { version = "4.4.2", features = ["derive"] }
sha2 = "0.10.7"
thiserror = "1.0.48"
anyhow = "1.0.75"
dialoguer = "0.10.4"
indicatif = "0.17.6"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
tempfile = "3.8.0"
zip = "0.6.6"

[[bin]]
name = "diffpatch"
path = "src/main.rs"
