[package]
name = "diffpatch"
version = "0.1.2"
edition = "2024"
description = "A tool to compare directories and create executable patches"
authors = ["Melaton"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/LemoBits/DiffPatch"
keywords = ["diff", "patch", "file-comparison", "executable-patch"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
walkdir = "2.5.0"
clap = { version = "4.5.32", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "2.0.12"
anyhow = "1.0.97"
dialoguer = "0.11.0"
indicatif = "0.17.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.19.1"
zip = "2.5.0"
rayon = "1.10.0"
lazy_static = "1.5.0"
num_cpus = "1.16.0"

[[bin]]
name = "diffpatch"
path = "src/main.rs"
