[package]
name = "diffpatch"
version = "0.1.2"
edition = "2024"
description = "A tool to compare directories and create executable patches"
authors = ["Melaton"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/LemoBits/DiffPatch"
keywords = ["diff", "patch", "file-comparison", "executable-patch"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/LemoBits/DiffPatch"

[dependencies]
# Core functionality
anyhow = "1.0.97"
thiserror = "2.0.12"
walkdir = "2.5.0"
sha2 = "0.10.8"
similar = "2.7.0"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# CLI interface
clap = { version = "4.5.34", features = ["derive"] }
dialoguer = "0.11.0"
indicatif = "0.17.11"

# File operations
zip = "2.5.0"
tempfile = "3.19.1"

# Parallel processing
rayon = "1.10.0"
lazy_static = "1.5.0"
num_cpus = "1.16.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[[bin]]
name = "diffpatch"
path = "src/main.rs"
